tests/ui/invalid_status_code.stderr
error: Status code 999 is out of valid range
       help: HTTP status codes must be between 100-599
       note: common codes: 200 (OK), 201 (Created), 400 (Bad Request), 404 (Not Found), 500 (Internal Error)
 --> tests/ui/invalid_status_code.rs:8:1
  |
8 | /// @response 999 Json<String> Invalid status code
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `axum::response::Json`
 --> tests/ui/invalid_status_code.rs:3:5
  |
3 | use axum::response::Json;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
